src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --bg-surface: #e6e6e6;
    --bg-footer-surface: #191e24;

    --clr-primary: #ffffff;
    --clr-secondary: #000000;
    --clr-accent: #e42ec0;
    
    --clr-heading: #000;
    --clr-base: #1f282e;
    --clr-inverted: #ffffff;

    --btn-padding: .6rem 1.3rem;
  }

  /* @media (prefers-color-scheme: dark) {
    :root {
      --clr-surface: #1a1b1b;
      --clr-footer-surface: #000000;
  
      --clr-primary: #000000;
      --clr-secondary: #ffffff;
      --clr-accent: #e42ec0;
      
      --clr-heading: #ffffff;
      --clr-text: #d1dae0;
      --clr-inverted: #000000;
    } 
  }

  :root:has(#toggle:checked) {
    color-scheme: dark;
    
    --clr-surface: #1a1b1b;
    --clr-footer-surface: #000000;
  
    --clr-primary: #000000;
    --clr-secondary: #ffffff;
    --clr-accent: #e42ec0;
    
    --clr-heading: #ffffff;
    --clr-text: #d1dae0;
    --clr-inverted: #000000;
  }

  :root:has(#toggle:not(:checked)) {
    color-scheme: light;

    --bg-surface: #e6e6e6;
    --bg-footer-surface: #191e24;

    --clr-primary: #ffffff;
    --clr-secondary: #000000;
    --clr-accent: #e42ec0;
    
    --clr-heading: #000;
    --clr-text: #1f282e;
    --clr-inverted: #ffffff;
  } */
}

:root {
  /* Step -2: 12.50px → 10.00px */
  --fs-100: clamp(0.63rem, calc(0.84rem + -0.27vw), 0.78rem);

  /* Step -1: 15.00px → 14.14px */
  --fs-200: clamp(0.88rem, calc(0.96rem + -0.09vw), 0.94rem);

  /* Step 0: 18.00px → 20.00px */
  --fs-300: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);

  /* Step 1: 21.60px → 28.28px */
  --fs-400: clamp(1.35rem, calc(1.20rem + 0.73vw), 1.77rem);

  /* Step 2: 25.92px → 39.99px */
  --fs-500: clamp(1.62rem, calc(1.31rem + 1.53vw), 2.50rem);

  /* Step 3: 31.10px → 56.54px */
  --fs-600: clamp(1.94rem, calc(1.39rem + 2.77vw), 3.53rem);

  /* Step 4: 37.32px → 79.95px */
  --fs-700: clamp(2.33rem, calc(1.41rem + 4.63vw), 5.00rem);

  /* Step 5: 44.79px → 113.05px */
  --fs-800: clamp(2.80rem, calc(1.32rem + 7.42vw), 7.07rem);
}

*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: var(--font-onest);
}

/* html {
  color-scheme: light dark;
} */

body {
  background: var(--clr-surface);
  color: var(--clr-base);
  line-height: 1.6;
  font-size: var(--fs-300);
}

.wrapper {
  width: min(100% - 3rem, 100ch);
  margin-inline: auto;
  place-items: center;
}

@media screen and (width < 1500px) {
  .wrapper {
    width: min(100% - 15rem, 100ch);
  }
}

@media screen and (width < 1000px) {
  .wrapper {
    width: min(100% - 5rem, 100ch);
  }
}

@media screen and (width < 768px) {
  .wrapper {
    width: min(100% - 3rem, 100ch);
  }
}


.flow > * + * {
  margin-top: 1em;
}

h1,
h2,
h3,
h4 {
  color: var(--clr-heading);
  line-height: 1.1;
  text-wrap: balance;
}

h2,
h3,
h4 {
  font-family: var(--font-worksans);
}

h1 {
  font-family: var(--font-worksans);
  letter-spacing: 2px;
  font-size: var(--fs-600);
}

h2 {
  font-size: var(--fs-500);
}

h3 {
  font-size: var(--fs-400);
}

button,
input {
  font-size: var(--fs-300);
}

img {
  max-width: 100%;
  display: block;
}

/* ::marker {
  color: var(--clr-primary);
} */

.ghost-btn-hover::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background: white;
  transition: all 300ms ease;
  z-index: -1;
}

.ghost-btn-hover:hover::before {
  width: 100%;
}

.ghost-btn-hover:hover {
  color: black;
}

.modal-shadow {
  box-shadow: 5px 0 30px 0 rgba(0 0 0 / 1);
}

